# aide

./: .env.example  .gitignore  Dockerfile  README.md  common.py  compose.yaml  infer.py  main.py  pyproject.toml  train.py
